--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>groupId</groupId>
     <artifactId>work_space</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.84.Final</version>
+        </dependency>
+    </dependencies>
+
+
     <build>
         <plugins>
             <plugin>
